--- a/style.css
+++ b/style.css
@@ -82,3 +82,62 @@ a {
     padding: 7px 25px;
     margin-top: 10px;
 }
+
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.section2 .content {
+    margin: 30px;
+    font-size: 34px;
+    font-weight: 800;
+    color: #1f2937;
+}
+
+.boxes {
+    margin: 10px;
+    display: flex;
+    gap: 60px;
+}
+.imgtxt {
+    width: 110px;
+    display: flex;
+    flex-direction: column;
+    text-align:justify;
+    color: gray;
+}
+.box {
+    height: 100px;
+    width: 100px;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 7px;
+    border-color: #3882F6;
+}
+
+.section3 {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+.section3 .content {
+    display: flex;
+    flex-direction: column;
+    width: 650px;
+    text-align: justify;
+    gap: 20px;
+}
+
+
+.section3 .quote {
+    display: flex;
+    font-size: 36px;
+    align-self: flex-end;
+}
+
+.section3 .author {
+    align-self: flex-end;
+    font-size: 21px;
+    font-weight: 700;
+}
